--- a/index.html
+++ b/index.html
@@ -368,7 +368,80 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-subscribe">
+                <p class="footer-subscribe-title">Subscribe</p>
+                <label for="subscibe_email">
+                    <input type="email" name="subscibe_email" id="subscibe_email" placeholder="E-mail">
+                </label>
+                <button class="btn btn-subscribe">
+                    <p class="btn-subscribe-text">Subscribe</p>
+                    <svg class="modal-close-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-letter"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </footer>
+    <div class="backdrop">
+        <div class="modal">
+            <button class="modal-btn-close" type="button">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-x-mark"></use>
+                </svg>
+            </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form" name="order">
+                <div class="modal-form-field">
+                    <label class="modal-form-lable" for="user_name">Name</label>
+                    <div class="modal-input-wrapper">
+                        <input class="modal-form-input" type="text" name="user_name" id="user_name">
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-user"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-form-field">
+                    <label class="modal-form-lable" for="user_phone">Phone</label>
+                    <div class="modal-input-wrapper">
+                        <input class="modal-form-input" type="tel" name="user_phone" id="user_phone">
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-form-field">
+                    <label class="modal-form-lable" for="user_email">Email</label>
+                    <div class="modal-input-wrapper">
+                        <input class="modal-form-input" type="email" name="user_email" id="user_email">
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-form-field">
+                    <label class="modal-form-lable" for="user_comment">Email</label>
+                    <textarea class="modal-form-comment" rows="4" name="user_comment" id="user_comment" placeholder="Enter text"></textarea>
+                </div>
+                <div class="modal-form-agreement">
+                    <input
+                      type="checkbox"
+                      name="user_agreement"
+                      id="user_agreement"
+                      value="false"
+                    />
+                    <label class="modal-form-description" for="user_agreement">
+                      <span class="modal-form-checkbox">
+                        <svg class="modal-form-checkbox-icon" width="10" height="8">
+                          <use href="./images/icons.svg#icon-checkmark"></use>
+                        </svg>
+                      </span>
+                      I accept the terms and conditions of the
+                      <a class="modal-form-link" href="">Privacy Policy</a>
+                    </label>
+                  </div>
+                  <button class="btn" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
