--- a/index.html
+++ b/index.html
@@ -370,15 +370,18 @@
             </div>
             <div class="footer-subscribe">
                 <p class="footer-subscribe-title">Subscribe</p>
-                <label for="subscibe_email">
-                    <input type="email" name="subscibe_email" id="subscibe_email" placeholder="E-mail">
-                </label>
-                <button class="btn btn-subscribe">
-                    <p class="btn-subscribe-text">Subscribe</p>
-                    <svg class="modal-close-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-letter"></use>
-                    </svg>
-                </button>
+                <form class="form-subscribe"  name="subscribe">
+                    <label for="subscribe_email">
+                        <input class="email-input" type="email" name="subscribe_email" id="subscribe_email" placeholder="E-mail">
+                    </label>
+                    <button class="btn btn-subscribe" type="submit">
+                        <p class="btn-subscribe-text">Subscribe</p>
+                        <svg class="subscribe-link-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-letter"></use>
+                        </svg>
+                    </button>
+                </form>
+                
             </div>
         </div>
     </footer>
@@ -419,27 +422,27 @@
                     </div>
                 </div>
                 <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user_comment">Email</label>
+                    <label class="modal-form-lable" for="user_comment">Comment</label>
                     <textarea class="modal-form-comment" rows="4" name="user_comment" id="user_comment" placeholder="Enter text"></textarea>
                 </div>
                 <div class="modal-form-agreement">
                     <input
+                      class="visually-hidden"
                       type="checkbox"
                       name="user_agreement"
                       id="user_agreement"
                       value="false"
                     />
-                    <label class="modal-form-description" for="user_agreement">
+                    
+                    <label class="modal-form-agreement-text" for="user_agreement">
                       <span class="modal-form-checkbox">
                         <svg class="modal-form-checkbox-icon" width="10" height="8">
                           <use href="./images/icons.svg#icon-checkmark"></use>
                         </svg>
-                      </span>
-                      I accept the terms and conditions of the
-                      <a class="modal-form-link" href="">Privacy Policy</a>
+                      </span>I accept the terms and conditions of the <a class="modal-form-link" href="">Privacy Policy</a>
                     </label>
-                  </div>
-                  <button class="btn" type="submit">Send</button>
+                </div>
+                <button class="btn btn-send" type="submit">Send</button>
             </form>
         </div>
     </div>
