--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
             <div class="footer-subscribe">
                 <p class="footer-subscribe-title">Subscribe</p>
                 <form class="form-subscribe"  name="subscribe">
-                    <label for="subscribe_email">
+                    <label class="email-input-lable " for="subscribe_email">
                         <input class="email-input" type="email" name="subscribe_email" id="subscribe_email" placeholder="E-mail">
                     </label>
                     <button class="btn btn-subscribe" type="submit">
-                        <p class="btn-subscribe-text">Subscribe</p>
+                        Subscribe
                         <svg class="subscribe-link-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-letter"></use>
                         </svg>
@@ -395,9 +395,9 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form" name="order">
                 <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user_name">Name</label>
+                    <label class="modal-form-lable" for="user-name">Name</label>
                     <div class="modal-input-wrapper">
-                        <input class="modal-form-input" type="text" name="user_name" id="user_name">
+                        <input class="modal-form-input" type="text" name="user-name" id="user-name">
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-user"></use>
                         </svg>
@@ -422,19 +422,19 @@
                     </div>
                 </div>
                 <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user_comment">Comment</label>
-                    <textarea class="modal-form-comment" rows="4" name="user_comment" id="user_comment" placeholder="Enter text"></textarea>
+                    <label class="modal-form-lable" for="user-comment ">Comment</label>
+                    <textarea class="modal-form-comment" rows="4" name="user-comment " id="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-form-agreement">
                     <input
                       class="visually-hidden"
                       type="checkbox"
-                      name="user_agreement"
-                      id="user_agreement"
-                      value="false"
+                      name="user-privacy"
+                      id="user-privacy"
+                      value="true"
                     />
                     
-                    <label class="modal-form-agreement-text" for="user_agreement">
+                    <label class="modal-form-agreement-text" for="user-privacy">
                       <span class="modal-form-checkbox">
                         <svg class="modal-form-checkbox-icon" width="10" height="8">
                           <use href="./images/icons.svg#icon-checkmark"></use>
