--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
             <div class="footer-subscribe">
                 <p class="footer-subscribe-title">Subscribe</p>
                 <form class="form-subscribe"  name="subscribe">
-                    <label class="email-input-lable " for="subscribe_email">
-                        <input class="email-input" type="email" name="subscribe_email" id="subscribe_email" placeholder="E-mail">
+                    <label class="email-input-label " for="subscribe-email">
+                        <input class="email-input" type="email" name="subscribe-email" id="subscribe-email" placeholder="E-mail">
                     </label>
                     <button class="btn btn-subscribe" type="submit">
                         Subscribe
@@ -395,7 +395,7 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form" name="order">
                 <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user-name">Name</label>
+                    <label class="modal-form-label" for="user-name">Name</label>
                     <div class="modal-input-wrapper">
                         <input class="modal-form-input" type="text" name="user-name" id="user-name">
                         <svg class="modal-form-icon" width="18" height="24">
@@ -404,26 +404,26 @@
                     </div>
                 </div>
                 <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user_phone">Phone</label>
+                    <label class="modal-form-label" for="user-phone">Phone</label>
                     <div class="modal-input-wrapper">
-                        <input class="modal-form-input" type="tel" name="user_phone" id="user_phone">
+                        <input class="modal-form-input" type="tel" name="user-phone" id="user-phone">
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user_email">Email</label>
+                    <label class="modal-form-label" for="user-email">Email</label>
                     <div class="modal-input-wrapper">
-                        <input class="modal-form-input" type="email" name="user_email" id="user_email">
+                        <input class="modal-form-input" type="email" name="user-email" id="user-email">
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                     </div>
                 </div>
-                <div class="modal-form-field">
-                    <label class="modal-form-lable" for="user-comment ">Comment</label>
-                    <textarea class="modal-form-comment" rows="4" name="user-comment " id="user-comment" placeholder="Text input"></textarea>
+                <div class="modal-form-comment-field">
+                    <label class="modal-form-label" for="user-comment">Comment</label>
+                    <textarea class="modal-form-comment" rows="4" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-form-agreement">
                     <input
