add mobile menu draft

--- a/index.html
+++ b/index.html
@@ -446,5 +446,13 @@
             </form>
         </div>
     </div>
+    <div class="mobile-menu">
+        <button class="close-mobile-menu-btn"></button>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </body>
 </html>
